DeleteTask/DeleteTaskTodoMicroservice/manifests-sri/del-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: delete-task-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: amazon
  template:
    metadata:
      labels:
        app: amazon
    spec:
      containers:
      - name: amazon-del
        image: acr1612.azurecr.io/deletetask:latest
        ports:
        - containerPort: 8000
