DeleteTask/DeleteTaskTodoMicroservice/manifests-sri/del-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: amazon-del-svc
spec:
  selector:
    app: amazon
  ports:
  - port: 80
    targetPort: 8000
